k8s/setup/ingress-rules.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
spec:
  tls:
  - hosts:
    - api-testing.example.com
    secretName: app-tls
  rules:
  - host: api-testing.example.com
    http:
      paths:
      - backend:
          serviceName: app-service
          servicePort: 80
        path: /
